# linear_regressor_cli

./: .gitignore  README.md  mix.exs  ratio.txt
bench/: _boston_bench.exs  boston_bench.exs  fit_bench.exs  pseudoModel_bench.exs
bench/dot_product/: elixir_dp_bench.exs  gpgpu_bench.exs  rust_bench.exs  rust_multi_core_bench.exs
bench/gpu/: gpu_bench3.exs  gpu_bench4.exs  gpu_bench5.exs  gpu_bench6.exs  gpu_bench7.exs
bench/graphs/: index.html
config/: config.exs
data/: boston_house_prices_x.csv  boston_house_prices_y.csv  linnerud_exercise.csv  linnerud_physiological.csv
lib/: benchmark.ex  boston.ex  boston_inlining.ex  boston_matrex.ex  boston_nif.ex  linear_regressor_cli.ex  linnerud.ex  regressor_run.ex
lib/boston/: boston_nif.ex  (+1 more)
native/linear_regressor_nif/: Cargo.toml  README.md
native/linear_regressor_nif/src/: lib.rs
native/linear_regressor_nif/src/ai_ml/: mod.rs
native/linear_regressor_nif/src/ai_ml/linear_regressor/: mod.rs  nif.rs
native/linear_regressor_nif/src/aiml/: mod.rs
native/linear_regressor_nif/src/aiml/LinearRegressor/: mod.rs  nif.rs
native/linear_regressor_nif/src/atoms/: mod.rs
native/linear_regressor_nif/src/matrix/: mod.rs  multi_thread.rs  single_thread.rs
native/linear_regressor_nif/src/matrix/MultiCore/: mod.rs  nif.rs
native/linear_regressor_nif/src/matrix/SingleCore/: .mod.rs.swp  mod.rs  nif.rs
native/linear_regressor_nif/src/matrix/gpu/: mod.rs  nif.rs
native/linear_regressor_nif/src/matrix/multi_core/: mod.rs  nif.rs
native/linear_regressor_nif/src/matrix/single_core/: mod.rs  nif.rs
rust_src/: Cargo.toml
test/: linear_regressor_cli_test.exs
(+22 files in other folders)
