[package]
name = "linear_regressor_nif"
version = "0.1.0"
authors = []

[lib]
name = "linear_regressor_nif"
path = "src/lib.rs"
crate-type = ["dylib"]

[profile.release]
opt-level = 3
codegen-units = 1

[dependencies]
rustler = "0.18.0"
rustler_codegen = "0.18.0"
lazy_static = "1.0"
scoped-pool = "1.0.0"
ocl = "0.18"
ocl-extras = "0.1"
